2009-03-27  Esteban Sanchez  <estebans@artica.es>

	* pandoradb.sql, extras/pandoradb_migrate_v2.x_to_v3.0.sql: Fixed
	constraint restrictions on alert actions.

	* godmode/users/configure_user.php: Many bugfixes when creating and
	editing.
	
	* include/auth/mysql.php: Fixed return value on create_user() because
	it does not return an insert id.

	* include/functions_db.php: Call debug() on SQL errors to get a
	backtrace.

	* include/functions_ui.php: Added a return value to debug().

	* operation/users/user_edit.php: Renamed user_update().

2009-03-26  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_reporting.php: Fixed security vulnerability
	in get_group_stats. Thanks to Eric Ross for pointing it out.

2009-03-26  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: SLA parameters now accept float values.
	
	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: SLA parameters now accept 
	float values after a table update.
	
	* godmode/setup/filemgr.php: New feature: a file manager, accesible only by
	pandora Administrators. Have some security checks but is not intended to be
	used by anyone not admin.
	
	* godmode/menu.php: Added filemanager and fixed minor problem under SNMP
	Godmode (fake submenu).

2009-03-26  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/jquery.ui.dialog.js: Added to repository.

	* index.php, general/header.php: Replaced overlay with jquery UI
	dialog.

	* godmode/agentes/module_manager.php: Use print_moduletype_image().

	* images/close.png, images/transparent.png,
	include/javascript/jquery.overlay.js: Removed from repository.

	* include/javascript/jquery.pandora.js: Use dialog instead of overlay.

	* include/styles/images/dialog-*: Added to repository. Dialog images.

	* include/styles/pandora.css: Removed overlay styles.

	* include/styles/dialog.css: Added to repository. Dialog styles.

	* include/functions_ui.php: Show description on
	print_moduletype_icon() title.
